feat: guia de cores

--- a/index.html
+++ b/index.html
@@ -3,15 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/global.css">
+    <link rel="stylesheet" href="styles/style.css">
     <title>Inclusão Digital - COMPAZ</title>
 </head>
 
 <body>
     <header class="header-carlos">
-
+        <p>Projeto Inclusão Digital</p>
     </header>
 
     <main>
+        <div class="tests">
+            <div class="box-colors">
+                <div class="primary-color"><p>primary-color</p></div>
+                <div class="secundary-color"><p>secundary-color</p></div>
+                <div class="tertiary-color"><p>tertiary-color</p></div>
+                <div class="background-color"><p>background-color</p></div>
+            </div>
+        </div>
+
         <div class="banner-julio">
 
         </div>
