refactor: correcao lista de aulas

--- a/index.html
+++ b/index.html
@@ -95,12 +95,13 @@
             <div class="features">
                 <ul>
                     <li>✅ Hardware e software</li>
-                    <li>✅ E-mail e Google Drive</li>
+                    <li>✅ Navegadores e E-mail</li>
+                    <li>✅ Google Drive</li>
                     <li>✅ Google Docs</li>
-                    <li>✅ Google Slides</li>
                 </ul>
-            
+                
                 <ul>
+                    <li>✅ Google Slides</li>
                     <li>✅ Google Planilhas</li>
                     <li>✅ Internet das Coisas</li>
                     <li>✅ Inteligência artificial</li>
