--- a/index.html
+++ b/index.html
@@ -78,11 +78,17 @@
 
         <section class="containers container">
             <div class="left-box">
-            <h1>Lorem ipsum dolor sit amet!</h1>
-            <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid aut debitis labore maxime soluta iusto fugit maiores nostrum minima nulla nobis sit, ipsam facere officia placeat obcaecati delectus. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt dolorum vero est dignissimos, corrupti odio ad nisi perferendis assumenda repudiandae soluta quam adipisci sequi numquam animi quidem sint incidunt possimus. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil maiores.
-            </p>
-            <a href="#" class="btn">Baixar PDF</a>
+                <h1>Conteúdos gerados</h1>
+                <p>
+                    Durante o desenvolvimento das atividades do curso de extensão, bolsistas usaram da imaginação para elaborar metodologias aplicaveis como ferramentas pedagógicas para exemplificar e revisar conteúdos programáticos, facilitando a compreensão e aproximando os alunos ao mundo digital ao mesmo tempo que instruíram e estimularam os alunos a praticarem. Conheça essas metodologias e ferramentas digitais e convencionais:
+                </p>
+                <div class="box-buttons">
+                    <a href="#" class="btn btn1">
+                        Apostilha <i class="bi bi-download"></i>
+                    </a>
+                    <a href="#" class="btn btn2">Conteúdos <i class="bi bi-download"></i></a>
+                    <a href="#" class="btn btn3">Relatórios <i class="bi bi-download"></i></a>
+                </div>
             </div>
 
             <div class="right-box">
@@ -164,7 +170,7 @@
                         </div>
                     </div>
                     <div class="card-content">
-                        <h3 class="badge3">Tradução e interpretação em libras</h3>     
+                        <h3 class="badge5">Tradução e interpretação em libras</h3>     
                     </div>
                 </div>
                 <div class="card">
@@ -257,28 +263,48 @@
         </div>
     </main>
 
-    <footer class="footer-carl" id="footer">
-        <div class="interface-footer">
-            <div class="line-footer1">
-                
-                <h2 class="titulo-footer">Onde nos encontrar</h2>
+    <footer class="footer" id="footer">
+        <div class="footer-container">
+
+            <!-- Logo -->
+            <div class="footer-logo">
+                <img src="logo.png" alt="Logo Inclusão Social">
+            </div>
+
+            <!-- Institucional -->
+            <div class="footer-column">
+                <h3>Institucional</h3>
+                <ul>
+                    <li>
+                        <a href="#">Quem Somos</a>
+                    </li>
+                    <li>
+                        <a href="#">Política de Privacidade</a>
+                    </li>
+                    <li>
+                        <a href="mailto:2025inclusaodigital@gmail.com?subject=Contato%20via%20site&body=Olá,%20gostaria%20de%20saber%20mais%20sobre...">Envie um e-mail</a>
+                    </li>
+                </ul>
+            </div>
+
+            <!-- Redes sociais -->
+            <div class="footer-column">
+                <h3>Siga o Inclusão Digital:</h3>
                 <div class="buttons-footer">    
                     <a href="https://www.instagram.com/compazdigital?igsh=MmdzMW96b3Bjc2Mz" target="_blank" class="btn-sociais"><i class="bi bi-instagram"></i></a>
                     <a href="#"  target="_blank" class="btn-sociais"><i class="bi bi-linkedin"></i></a>
                     <a href="#" target="_blank" class="btn-sociais"><i class="bi bi-youtube"></i></a>
                 </div>
-
-            </div>
-            <div class="line-footer2">
-                <div class="box-footer">
-                    <img src="img/apoio.png" alt="">
-                </div>
             </div>
 
-            <div class="line-footer3">
-                <p>Inclusão Digital 2025 &copy; Todos os direitos reservados</p>
-            </div>
+        </div>
 
+        <!-- Linha inferior -->
+        <div class="footer-bottom">
+            <p>
+            Copyright &copy; 2025 Inclusão Digital — Todos os direitos reservados.
+            <p>Inclusão Digital 2025 &copy; Todos os direitos reservados</p>
+            </p>
         </div>
     </footer>
 
