refactor: link do instagram

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
             <div class="footer-column">
                 <h3>Siga o Inclusão Digital:</h3>
                 <div class="buttons-footer">    
-                    <a href="https://www.instagram.com/compazdigital?igsh=MmdzMW96b3Bjc2Mz" target="_blank" class="btn-sociais"><i class="bi bi-instagram"></i></a>
+                    <a href="https://www.instagram.com/compazdigital/" target="_blank" class="btn-sociais"><i class="bi bi-instagram"></i></a>
                     <a href="#"  target="_blank" class="btn-sociais"><i class="bi bi-linkedin"></i></a>
                     <a href="#" target="_blank" class="btn-sociais"><i class="bi bi-youtube"></i></a>
                 </div>
