--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <nav>
                     <ul>
                         <li><a href="#info">INFO</a></li>
-                        <li><a href="#depoimentos">DEPOIMENTOS</a></li>
+                        <li><a href="#projeto">PROJETO</a></li>
                         <li><a href="#cards_bolsistas_carl">BOLSISTAS</a></li>
                         <li><a href="#apoio">APOIADORES</a></li>
                         <li><a href="#footer">CONTATOS</a></li>
@@ -42,7 +42,7 @@
             <div class="mobile-menu">
                 <ul>
                     <li><a class="item-mobile" href="info">INFO</a></li>
-                    <li><a class="item-mobile" href="#depoimentos">DEPOIMENTOS</a></li>
+                    <li><a class="item-mobile" href="#projeto">PROJETO</a></li>
                     <li><a class="item-mobile" href="#cards_bolsistas">BOLSISTAS</a></li>
                     <li><a class="item-mobile" href="#apoio">APOIADORES</a></li>
                     <li><a class="item-mobile" href="#footer">CONTATOS</a></li>
@@ -76,7 +76,7 @@
             
         </div>
 
-        <section class="containers container">
+        <section class="containers container" id="projeto">
             <div class="background-box">
                 
                 <div class="left-box">
@@ -299,10 +299,7 @@
 
         <!-- Linha inferior -->
         <div class="footer-bottom">
-            <p>
-            Copyright &copy; 2025 Inclusão Digital — Todos os direitos reservados.
             <p>Inclusão Digital 2025 &copy; Todos os direitos reservados</p>
-            </p>
         </div>
     </footer>
 
