feat: section info

--- a/index.html
+++ b/index.html
@@ -69,12 +69,32 @@
             </div>
         </section>
 
-        <div class="containers info-julio" id="info">
-            <div class="titulos_containers">
-                <h2 style="color: black;">info</h2>
+        <section class="info">
+            <div class="info-content">
+                <div class="info-image">
+                    <img id="info-img" src="img/projeto.png" alt="Imagem ilustrativa">
+                </div>
+                <div class="info-text">
+                    <div class="info-card active" id="projeto">
+                        <h3>O Projeto</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt mollitia numquam eius atque ipsum quisquam adipisci reprehenderit at quae voluptas, ducimus architecto quidem cupiditate harum ad veritatis hic. Praesentium, accusamus.</p>
+                    </div>
+                    <div class="info-card" id="sobre">
+                        <h3>Sobre Nós</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero dignissimos rem, magnam dolor recusandae alias reiciendis molestias ullam odit nihil, iste ipsam ut explicabo perspiciatis ab, enim voluptas ducimus hic.</p>
+                    </div>
+                    <div class="info-card" id="curso">
+                        <h3>Sobre o Curso</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti ad provident eum rerum pariatur magnam facilis inventore, ipsam suscipit! Fuga nemo iure laudantium quisquam tempora asperiores illo eveniet deserunt illum.</p>
+                    </div>
+                    <div class="info-card" id="lorem">
+                        <h3>Lorem ipsum</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti ad provident eum rerum pariatur magnam facilis inventore, ipsam suscipit! Fuga nemo iure laudantium quisquam tempora asperiores illo eveniet deserunt illum.</p>
+                    </div>
+                </div>
             </div>
-            
-        </div>
+        </section>
+
 
         <section class="containers container" id="projeto">
             <div class="background-box">
@@ -192,7 +212,7 @@
                         </div>
                     </div>
                     <div class="card-content">
-                        <h3 class="badge2">Desenv. de sistemas</h3>     
+                        <h3 class="badge4">Logística</h3>     
                     </div>
                 </div> 
             </div>
