fix: id info para auto-scroll

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </div>
         </section>
 
-        <section class="info">
+        <section class="info" id="info">
             <div class="info-content">
                 <div class="info-image">
                     <img id="info-img" src="img/projeto.png" alt="Imagem ilustrativa">
