refactor: textos-sobre adicionados e melhorias nos titulos

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
             <div class="flex">
 
-                <a href="index.php">
-                    <img src="" alt="Logo">
+                <a href="index.html">
+                    <img src="img/logo_site_branca.png" alt="Logo">
                 </a>
 
                 <nav>
@@ -69,27 +69,23 @@
             </div>
         </section>
 
-        <section class="info" id="info">
+        <section class="containers info" id="info">
             <div class="info-content">
                 <div class="info-image">
-                    <img id="info-img" src="img/projeto.png" alt="Imagem ilustrativa">
+                    <img id="info-img" src="img/sobre_projeto.png" alt="Imagem ilustrativa">
                 </div>
                 <div class="info-text">
-                    <div class="info-card active" id="projeto">
+                    <div class="info-card active" id="sobre_projeto">
                         <h3>O Projeto</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt mollitia numquam eius atque ipsum quisquam adipisci reprehenderit at quae voluptas, ducimus architecto quidem cupiditate harum ad veritatis hic. Praesentium, accusamus.</p>
+                        <p>O projeto “Aplicabilidade de Ferramentas Digitais”, desenvolvido por estudantes em EAD, dos cursos de administração, desenvolvimento de sistemas, logística, design gráfico e tradução e interpretação de libras da Escola Técnica Professor Antônio Carlos Gomes da Costa (ETEPAC), foi aplicado como extensão para os usuários da biblioteca Júlio Santiago que funciona no COMPAZ Miguel Arraes, um parceiro de suma importância desse projeto. Teve como objetivo principal promover a inclusão digital e o desenvolvimento de habilidades tecnológicas entre jovens e adultos da comunidade que circula essa instituição, criada pela Prefeitura do Recife e de primordial importância para a comunidade.<br>Essa ação do projeto contou com a interdisciplinaridade de conhecimento, pois o processo de escolha dos bolsistas resultou em 9 selecionados de 5 cursos técnicos diferentes que trabalharam em conjunto para o mesmo objetivo. Foi possível observar que, além do compartilhamento de conhecimento, foi estabelecida uma troca de experiências rica em diversidade com os alunos que receberam o treinamento, o que enriqueceu o processo de aprendizagem e ampliou o impacto social do projeto. Além disso, vale salientar que se obteve um resultado positivo, haja vista que todos, tanto os bolsistas como os alunos, aprenderam e desenvolveram habilidades e competências.<br>Em suma, o trabalho desse projeto com a participação dos estudantes da ETEPAC abrirá novos horizontes aos alunos participantes da extensão, que no futuro poderão aplicar os conhecimentos adquiridos em suas vidas profissionais ou no seu dia a dia em trabalhos que exijam a tecnologia digital, pois receberam não só o básico da inclusão digital, mas perpassaram por uma trilha que contempla o uso de inteligência artificial e internet das coisas, tão presentes no cotidiano da humanidade atual.</p>
                     </div>
-                    <div class="info-card" id="sobre">
-                        <h3>Sobre Nós</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero dignissimos rem, magnam dolor recusandae alias reiciendis molestias ullam odit nihil, iste ipsam ut explicabo perspiciatis ab, enim voluptas ducimus hic.</p>
+                    <div class="info-card" id="sobre_parceria">
+                        <h3>Parceira</h3>
+                        <p>A parceria da ETEPAC com o COMPAZ foi crucial para a efetivação do projeto, tudo isso foi possível por serem duas instituições que possuem responsabilidades sociais com ênfase na educação, formando, assim, cidadãos para o futuro. A ETEPAC é um espaço de aprendizado, inovação e oportunidades, pelo qual são ofertados cursos técnicos e projetos voltados à formação cidadã. O COMPAZ, por sua vez, é símbolo de transformação e convivência social, promovendo paz, educação, esportes, cultura e lazer em um ambiente acolhedor e inclusivo. Assim, pode-se concluir que essa parceria foi uma união que trouxe resultados positivos e abrangentes para a sociedade.</p>
                     </div>
-                    <div class="info-card" id="curso">
-                        <h3>Sobre o Curso</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti ad provident eum rerum pariatur magnam facilis inventore, ipsam suscipit! Fuga nemo iure laudantium quisquam tempora asperiores illo eveniet deserunt illum.</p>
-                    </div>
-                    <div class="info-card" id="lorem">
-                        <h3>Lorem ipsum</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti ad provident eum rerum pariatur magnam facilis inventore, ipsam suscipit! Fuga nemo iure laudantium quisquam tempora asperiores illo eveniet deserunt illum.</p>
+                    <div class="info-card" id="sobre_bolsistas">
+                        <h3>Bolsistas</h3>
+                        <p>O projeto contou com a participação cooperativa de 9 bolsistas de cursos variados como logística, desenvolvimento de sistemas, entre outros. Essa diversidade possibilitou uma conexão de vários conhecimentos que juntos culminaram em uma ação social rica em saberes e maneiras diferentes de olhar o mundo ao redor. Tal iniciativa só teve sucesso pois os bolsistas se uniram em prol de um mesmo objetivo: A expansão do conhecimento como forma de inclusão social. Sendo assim, todos foram beneficiados com essa rica experiência.</p>
                     </div>
                 </div>
             </div>
@@ -135,9 +131,9 @@
             </div>
         </section>
 
-        <div class="containers container_bolsistas" id="cards_bolsistas_carl">
+        <section class="containers container_bolsistas" id="cards_bolsistas_carl">
             <div class="titulos_containers">
-                <h2>Bolsistas</h2>
+                <h2>Nosso time ajudou <span>dezenas de jovens e adultos</span><br> a dar seus primeiros passos no mundo cibernético</h2>
             </div>
                 
             <div class="card-list">
@@ -254,16 +250,16 @@
                     </div>
                 </div> 
             </div>
-        </div>
+        </section>
 
-        <div class="containers apoiadores-carl" id="apoio">
+        <section class="containers apoiadores-carl" id="apoio">
             <div class="titulos_containers">
-                <h2 style="color: black;">Apoio</h2>
+                <h2>Nossos financiadores e parceiros</h2>
             </div>
             
             <div class="box-icons-apoio">
                 <a href="https://ead.educacao.pe.gov.br/" target="_blank">
-                    <img src="img/etepac_logo.png" alt="">
+                    <img class="img_ete" src="img/etepac_logo.png" alt="">
                 </a>
                 <a href="https://compaz.recife.pe.gov.br/compaz-miguel-arraes" target="_blank">
                     <img src="img/compaz_logo.png" alt="">
@@ -278,7 +274,7 @@
                     <img src="img/see_horizontal_logo.png" alt="">
                 </a>
             </div>
-        </div>
+        </section>
     </main>
 
     <footer class="footer" id="footer">
@@ -286,7 +282,7 @@
 
             <!-- Logo -->
             <div class="footer-logo">
-                <img src="logo.png" alt="Logo Inclusão Social">
+                <img src="img/logo_site_branca_verde.png" alt="Logo Inclusão Social">
             </div>
 
             <!-- Institucional -->
