style: final banner

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <div class="icon-menu">
                         <button onclick="menuShow()"><i class="bi bi-list"></i></button>
                     </div>
-                    <a class="btn-entrar"></a>
+
                 </div>
                 
             </div>
@@ -52,21 +52,13 @@
     </header>
 
     <main>
+
         <section class="banner">
-            <div class="interface">
-
-                <div class="banner-container">
-                    <div class="banner-itens">
-
-                        <img src="img/TITULO.png" alt="">
-                        <div class="texto-banner">
-                            <h2>Projeto <span>Inclusão digital</span> - compaz</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi maiores alias adipisci repellendus repudiandae. Eos voluptatum ex inventore.</p>                            
-                        </div>  
-
-                    </div>
-                </div>
+            <div class="text-banner">
+                <h1>Projeto <span>Inclusão Digital</span></h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae, maiores. Harum soluta fugiat doloremque sequi quos consequaturç</p>
             </div>
+            <img src="img/banner_inclusao_digital(1920x1220).png" alt="">
         </section>
 
         <section class="containers info" id="info">
@@ -172,9 +164,7 @@
                     <div class="card-content">
                         <h3 class="badge4">Logística</h3>     
                     </div>
-                </div> 
-            </div>
-            <div class="card-list">
+                </div>
                 <div class="card">
                     <div class="card-img">
                         <img src="img/morena.jpg" alt="Thiago Paz">
@@ -184,7 +174,7 @@
                         </div>
                     </div>
                     <div class="card-content">
-                        <h3 class="badge5">Tradução e interpretação em libras</h3>     
+                        <h3 class="badge5">Tradução e interpretação de libras</h3>     
                     </div>
                 </div>
                 <div class="card">
@@ -210,9 +200,7 @@
                     <div class="card-content">
                         <h3 class="badge4">Logística</h3>     
                     </div>
-                </div> 
-            </div>
-            <div class="card-list">
+                </div>
                 <div class="card">
                     <div class="card-img">
                         <img src="img/gestora.jpg" alt="Thiago Paz">
@@ -248,13 +236,14 @@
                     <div class="card-content">
                         <h3 class="badge2">Desenv. de sistemas</h3>     
                     </div>
-                </div> 
+                </div>
             </div>
         </section>
 
         <section class="containers apoiadores-carl" id="apoio">
             <div class="titulos_containers">
                 <h2>Nossos financiadores e parceiros</h2>
+                <p>Visite o site👇</p>
             </div>
             
             <div class="box-icons-apoio">
