feat: section professores

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
                     <ul>
                         <li><a href="#info">INFO</a></li>
                         <li><a href="#projeto">PROJETO</a></li>
-                        <li><a href="#cards_bolsistas_carl">BOLSISTAS</a></li>
+                        <li><a href="#professores">PROFESSORES</a></li>
+                        <li><a href="#bolsistas">BOLSISTAS</a></li>
                         <li><a href="#apoio">APOIADORES</a></li>
                         <li><a href="#footer">CONTATOS</a></li>
                     </ul>
-
                 </nav>
 
                 <div class="menu-entrar">
@@ -41,9 +41,10 @@
 
             <div class="mobile-menu">
                 <ul>
-                    <li><a class="item-mobile" href="info">INFO</a></li>
+                    <li><a class="item-mobile" href="#info">INFO</a></li>
                     <li><a class="item-mobile" href="#projeto">PROJETO</a></li>
-                    <li><a class="item-mobile" href="#cards_bolsistas">BOLSISTAS</a></li>
+                    <li><a class="item-mobile" href="#professores">PROFESSORES</a></li>
+                    <li><a class="item-mobile" href="#bolsistas">BOLSISTAS</a></li>
                     <li><a class="item-mobile" href="#apoio">APOIADORES</a></li>
                     <li><a class="item-mobile" href="#footer">CONTATOS</a></li>
                 </ul>
@@ -82,7 +83,6 @@
                 </div>
             </div>
         </section>
-
 
         <section class="containers container" id="projeto">
             <div class="background-box">
@@ -123,7 +123,29 @@
             </div>
         </section>
 
-        <section class="containers container_bolsistas" id="cards_bolsistas_carl">
+        <section class="containers professores" id="professores">
+            <div class="titulos_containers">
+                <h2><span>Professores</span> que impulsionaram cada bolsista a alcançar <br> seu potencial máximo</h2>
+            </div>
+            <div class="box_professor">
+                <div class="text_professor prof1">
+                    <h3>Sônia Maria de Pádua</h3>
+                    <h4>Coordenadora</h4>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore quasi unde perferendis dolorum, quisquam quae nulla dolorem expedita facere architecto exercitationem omnis iure enim possimus culpa itaque nobis molestiae quaerat.</p>
+                </div>
+                <img src="img/sonia_inclusao_digital.png" alt="">
+            </div>
+            <div class="box_professor">
+                <div class="text_professor prof2">
+                    <h3>Fagner Filerminio Pontes</h3>
+                    <h4>Professor</h4>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore quasi unde perferendis dolorum, quisquam quae nulla dolorem expedita facere architecto exercitationem omnis iure enim possimus culpa itaque nobis molestiae quaerat.</p>
+                </div>
+                <img src="img/fagner_inclusao_digital.png" alt="">
+            </div>
+        </section>
+
+        <section class="containers container_bolsistas" id="bolsistas">
             <div class="titulos_containers">
                 <h2>Nosso time ajudou <span>dezenas de jovens e adultos</span><br> a dar seus primeiros passos no mundo cibernético</h2>
             </div>
@@ -256,7 +278,7 @@
                 <a href="https://www.facepe.br/" target="_blank">
                     <img src="img/facepe_logo.png" alt="">
                 </a>
-                <a href="#" target="_blank">
+                <a>
                     <img src="img/inovape_logo.png" alt="">
                 </a>
                 <a href="https://portal.educacao.pe.gov.br/" target="_blank">
