feat: downloads pdf

--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
                         Durante o desenvolvimento das atividades do curso de extensão, bolsistas usaram da imaginação para elaborar metodologias aplicaveis como ferramentas pedagógicas para exemplificar e revisar conteúdos programáticos, facilitando a compreensão e aproximando os alunos ao mundo digital ao mesmo tempo que instruíram e estimularam os alunos a praticarem. Conheça essas metodologias e ferramentas digitais e convencionais:
                     </p>
                     <div class="box-buttons">
-                        <a href="#" class="btn btn1">
+                        <a href="utils/pdfs/Projeto2.pdf" download="teste.pdf" class="btn btn1">
                             Apostilha <i class="bi bi-download"></i>
                         </a>
-                        <a href="#" class="btn btn2">Conteúdos <i class="bi bi-download"></i></a>
-                        <a href="#" class="btn btn3">Relatórios <i class="bi bi-download"></i></a>
+                        <a href="utils/pdfs/conteudos.pdf" download="conteudos.pdf" class="btn btn2">Conteúdos <i class="bi bi-download"></i></a>
+                        <a href="utils/pdfs/relatorios.pdf" download="relatorios.pdf" class="btn btn3">Relatórios <i class="bi bi-download"></i></a>
                     </div>
                 </div>
             </div>
