refactor: class names

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
         <!-- cabeçalho com logo, menu de navegação e botão de entrar -->
-    <header class="header-carlos" id="header">
+    <header class="header" id="header">
         <div class="box-header">
 
             <div class="flex">
@@ -110,7 +110,7 @@
                 <div class="right-box">
                     <h1>Conteúdos gerados</h1>
                     <p>
-                        Durante o desenvolvimento das atividades do curso de extensão, bolsistas usaram da imaginação para elaborar metodologias aplicaveis como ferramentas pedagógicas para exemplificar e revisar conteúdos programáticos, facilitando a compreensão e aproximando os alunos ao mundo digital ao mesmo tempo que instruíram e estimularam os alunos a praticarem. Conheça essas metodologias e ferramentas digitais e convencionais:
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima quibusdam a deleniti, impedit asperiores quos, quod ex mollitia ipsum hic doloremque recusandae doloribus, nesciunt harum provident reiciendis animi non totam. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat, sapiente consectetur voluptate, libero aliquid autem distinctio aliquam sit, obcaecati nam commodi reprehenderit. Eum laboriosam ratione, aperiam deleniti possimus deserunt doloribus.
                     </p>
                     <div class="box-buttons">
                         <a href="utils/pdfs/Projeto2.pdf" download="teste.pdf" class="btn btn1">
@@ -262,7 +262,7 @@
             </div>
         </section>
 
-        <section class="containers apoiadores-carl" id="apoio">
+        <section class="containers apoiadores" id="apoio">
             <div class="titulos_containers">
                 <h2>Nossos financiadores e parceiros</h2>
                 <p>Visite o site👇</p>
