feat: new photos

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <div class="card-list">
                 <div class="card">
                     <div class="card-img">
-                        <img src="img/user0.webp" alt="Thiago Paz">
+                        <img src="img/pocahontas.jpg" alt="Thiago Paz">
                         <div>
                             <h4>Andryene Rodrigues</h4>
                             <p>saiba mais</p>
@@ -177,7 +177,7 @@
                 </div>
                 <div class="card">
                     <div class="card-img">
-                        <img src="img/user0.webp" alt="Thiago Paz">
+                        <img src="img/elon-musk.jpg" alt="Thiago Paz">
                         <div>
                             <h4>Glébson Silva</h4>
                             <p>saiba mais</p>
@@ -213,7 +213,7 @@
                 </div>
                 <div class="card">
                     <div class="card-img">
-                        <img src="img/user0.webp" alt="Thiago Paz">
+                        <img src="img/donald-trump.png" alt="Thiago Paz">
                         <div>
                             <h4>Leonardo Felipe</h4>
                             <p>saiba mais</p>
@@ -249,7 +249,7 @@
                 </div>
                 <div class="card">
                     <div class="card-img">
-                        <img src="img/user0.webp" alt="Thiago Paz">
+                        <img src="img/henry-ford.jpg" alt="Thiago Paz">
                         <div>
                             <h4>Valmir Silva</h4>
                             <p>saiba mais</p>
