refactor: deactive links footer

--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
     </header>
 
     <main>
-
         <section class="banner">
             <div class="text-banner">
                 <h1>Projeto <span>Inclusão Digital</span></h1>
@@ -319,8 +318,8 @@
                 <h3>Siga o Inclusão Digital:</h3>
                 <div class="buttons-footer">    
                     <a href="https://www.instagram.com/compazdigital/" target="_blank" class="btn-sociais"><i class="bi bi-instagram"></i></a>
-                    <a href="#"  target="_blank" class="btn-sociais"><i class="bi bi-linkedin"></i></a>
-                    <a href="#" target="_blank" class="btn-sociais"><i class="bi bi-youtube"></i></a>
+                    <a class="btn-sociais"><i class="bi bi-linkedin"></i></a>
+                    <a class="btn-sociais"><i class="bi bi-youtube"></i></a>
                 </div>
             </div>
 
