fix: ajustes na img, paragrafo, icons da section professores

--- a/index.html
+++ b/index.html
@@ -132,44 +132,35 @@
                 <div class="text_professor prof1">
                     <h3>Sônia Maria de Pádua</h3>
                     <h4>Professora Integradora</h4>
-                    <p>Bacharela em Biblioteconomia pela Universidade Federal de Pernambuco (UFPE), com especialização em Informação Tecnológica também pela UFPE. Bibliotecária por 31 anos como coordenadora das 10 bibliotecas do SENAI-PE. Professora do Curso Técnico em Biblioteconomia em EAD, na ETEPAC. Professora Coordenadora desse projeto. Articuladora junto à empresa parceira e redatora. Submeteu o projeto à FACEPE, monitorou a aprovação, providenciou o recrutamento dos estudantes à formação, acompanhou a formação, seleção e preparação dos estudantes bolsistas para exercício da prática e demais atividades necessárias para o desenvolvimento do projeto.</p>
+                    <p>
+                        Bacharela em <span>Biblioteconomia</span> pela Universidade Federal de Pernambuco (UFPE), com especialização em <span>Informação Tecnológica</span> também pela UFPE. <span>Bibliotecária</span> por 31 anos como coordenadora das 10 bibliotecas do SENAI-PE. Professora do Curso Técnico em <span>Biblioteconomia em EAD</span>, na ETEPAC.<br>
+                        Professora <span>Coordenadora</span> desse projeto. Articuladora junto à empresa parceira e redatora. Submeteu o projeto à FACEPE, providenciou o recrutamento dos estudantes à formação, acompanhou a formação, seleção e preparação dos estudantes bolsistas para exercício da prática e demais atividades necessárias para o desenvolvimento do projeto.
+                    </p>
+
                     <div class="social-icons">
-                        <a href="https://www.linkedin.com/in/sonia-p%C3%A1dua-71400134/" target="_blank">
-                            <img
-                            src="img/linkedin-prof.svg"
-                            alt="LinkedIn"
-                            class="social-icon"
-                            />
-                        </a>
-                        <a href="http://lattes.cnpq.br/5705552727941447" target="_blank">
-                            <img src="img/Lattes.svg" alt="Lattes" class="social-icon" />
-                        </a>
+                        <a href="https://www.linkedin.com/in/sonia-p%C3%A1dua-71400134/" target="_blank" class="btn-sociais"><i class="bi bi-linkedin"></i></a>
+                        <a href="http://lattes.cnpq.br/5705552727941447" target="_blank" class="btn-sociais"><i class="bi bi-file-earmark-text-fill"></i></a>
                     </div>
                 </div>
-                <img src="img/sonia.png" alt="" class="professor-img" />
+                <img src="img/sonia.png" alt="" class="professor-img"/>
             </div>
             <div class="box_professor">
                 <div class="text_professor prof2">
                     <h3>Fagner Barbosa Silva Pontes</h3>
                     <h4>Professor Formador</h4>
-                    <p>Graduado em Matemática e em Sistemas de Informação pela Universidade Estácio de Sá. Especializado em Docência na Educação Profissional de Nível Técnico. Especializado em Educação e Novas Tecnologias. Professor da ETEPAC do Curso Técnico em Desenvolvimento de Sistemas, atuando principalmente nos seguintes temas: desenvolvimento web, programação e javascript, na modalidade EAD. Professor voluntário neste projeto, foi responsável por ser o facilitador na formação dos estudantes, orientar os bolsistas na confecção da apostila do curso de curta duração de promoção da inclusão digital para jovens e adultos, e coordenar os bolsistas na prática como facilitadores pelo período do curso promovido na biblioteca do COMPAZ Miguel Arraes.</p>
+                    <p>
+                        Graduado em <span>Matemática e em Sistemas de Informação</span> pela Universidade Estácio de Sá. Especializado em <span>Docência na Educação Profissional</span> de Nível Técnico. Especializado em Educação e Novas Tecnologias. Professor da ETEPAC do Curso Técnico em <span>Desenvolvimento de Sistemas</span>, atuando principalmente nos seguintes temas: desenvolvimento web, programação e javascript, na modalidade EAD.</br>
+                        <span>Professor voluntário neste projeto</span>, foi responsável por ser o facilitador na formação dos estudantes, orientar os bolsistas na confecção da apostila do curso de curta duração de promoção da inclusão digital para jovens e adultos, e coordenar os bolsistas na prática como facilitadores pelo período do curso promovido na biblioteca do COMPAZ Miguel Arraes.
+                    </p>
                     <div class="social-icons">
-                        <a href="https://www.linkedin.com/in/fagner-pontes-63242a257" target="_blank">
-                            <img
-                            src="img/linkedin-prof.svg"
-                            alt="LinkedIn"
-                            class="social-icon"
-                            />
-                        </a>
-                        <a href="http://lattes.cnpq.br/4827824373494382" target="_blank">
-                            <img src="img/Lattes.svg" alt="Lattes" class="social-icon" />
-                        </a>
-                        <a href="https://github.com/FagnerPontes" target="_blank">
-                            <img src="img/github-prof.svg" alt="GitHub" class="social-icon" />
-                        </a>
+                        <a href="https://www.linkedin.com/in/fagner-pontes-63242a257" target="_blank" class="btn-sociais"><i class="bi bi-linkedin"></i></a>
+
+                        <a href="http://lattes.cnpq.br/4827824373494382" target="_blank" class="btn-sociais"><i class="bi bi-file-earmark-text-fill"></i></a>
+
+                        <a href="https://github.com/FagnerPontes" target="_blank" class="btn-sociais"><i class="bi bi-github"></i></a>
                     </div>
                 </div>
-                <img src="img/fagner.png" alt="" class="professor-img" />                
+                <img src="img/fagner.png" alt="" class="professor-img"/>                
             </div>
         </section>
 
@@ -345,7 +336,7 @@
                 <h3>Siga o Inclusão Digital:</h3>
                 <div class="buttons-footer">    
                     <a href="https://www.instagram.com/compazdigital/" target="_blank" class="btn-sociais"><i class="bi bi-instagram"></i></a>
-                    <a href="#"  target="_blank" class="btn-sociais"><i class="bi bi-linkedin"></i></a>
+                    <a href="#" target="_blank" class="btn-sociais"><i class="bi bi-linkedin"></i></a>
                     <a href="https://www.youtube.com/@compazdigital" target="_blank" class="btn-sociais"><i class="bi bi-youtube"></i></a>
                 </div>
             </div>
