refactor: span text professor

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     <h3>Fagner Barbosa Silva Pontes</h3>
                     <h4>Professor Formador</h4>
                     <p>
-                        Graduado em <span>Matemática e em Sistemas de Informação</span> pela Universidade Estácio de Sá. Especializado em <span>Docência na Educação Profissional</span> de Nível Técnico. Especializado em Educação e Novas Tecnologias. Professor da ETEPAC do Curso Técnico em <span>Desenvolvimento de Sistemas</span>, atuando principalmente nos seguintes temas: desenvolvimento web, programação e javascript, na modalidade EAD.</br>
+                        Graduado em <span>Matemática e em Sistemas de Informação</span> pela Universidade Estácio de Sá. Especializado em <span>Educação e Novas Tecnologias</span>, e <span>Docência na Educação Profissional</span> de Nível Técnico. Professor da ETEPAC do Curso Técnico em <span>Desenvolvimento de Sistemas</span>, atuando principalmente nos seguintes temas: desenvolvimento web, programação e javascript, na modalidade EAD.</br>
                         <span>Professor voluntário neste projeto</span>, foi responsável por ser o facilitador na formação dos estudantes, orientar os bolsistas na confecção da apostila do curso de curta duração de promoção da inclusão digital para jovens e adultos, e coordenar os bolsistas na prática como facilitadores pelo período do curso promovido na biblioteca do COMPAZ Miguel Arraes.
                     </p>
                     <div class="social-icons">
@@ -179,7 +179,7 @@
                         </div>
                     </div>
                     <div class="card-content">
-                        <h3 class="badge13">Administração</h3>     
+                        <h3 class="badge3">Administração</h3>     
                     </div>
                 </div>
                 <div class="card">
