--- a/index.html
+++ b/index.html
@@ -280,6 +280,15 @@
                 </div>
             </div>
         </section>
+        <div id="modal-bolsista" class="modal">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <img id="modal-img" src="" alt="">
+                <h3 id="modal-nome"></h3>
+                <h4 id="modal-curso"></h4>
+                <p id="modal-descricao"></p>
+            </div>
+        </div>
 
         <section class="containers apoiadores" id="apoio">
             <div class="titulos_containers">
@@ -305,6 +314,8 @@
                 </a>
             </div>
         </section>
+        <!-- Modal (overlay) -->
+
     </main>
 
     <footer class="footer" id="footer">
@@ -350,5 +361,6 @@
     </footer>
 
     <script src="backend/scripts/index.js"></script>
+
 </body>
 </html>
