style: badge nos cursos

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                 <span class="close">&times;</span>
                 <img id="modal-img" src="" alt="">
                 <h3 id="modal-nome"></h3>
-                <h4 id="modal-curso"></h4>
+                <h4 class="badge1" id="modal-curso"></h4>
                 <p id="modal-descricao"></p>
             </div>
         </div>
