Adiciona PDF do projeto

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <div class="info-text">
                     <div class="info-card active" id="sobre_projeto">
                         <h3>O Projeto</h3>
-                        <p>O projeto “Aplicabilidade de Ferramentas Digitais”, desenvolvido por estudantes da ETEPAC em parceria com o COMPAZ Miguel Arraes, levou conhecimento e inclusão digital a jovens e adultos da comunidade. A iniciativa uniu diferentes cursos técnicos e resultou em aprendizados transformadores — para os participantes e para os bolsistas. <n> Quer saber como a tecnologia mudou realidades? <a href="pages/info_projeto.html">Clique aqui</a>.</p>
+                        <p>O projeto “Aplicabilidade de Ferramentas Digitais”, desenvolvido por estudantes da ETEPAC em parceria com o COMPAZ Miguel Arraes, levou conhecimento e inclusão digital a jovens e adultos da comunidade. A iniciativa uniu diferentes cursos técnicos e resultou em aprendizados transformadores — para os participantes e para os bolsistas. <n> Quer saber como a tecnologia mudou realidades? <a href="utils/pdfs/projeto_que_brilhou.pdf" target="_blank">Clique aqui</a>.</p>
                     </div>
                     <div class="info-card" id="sobre_parceria">
                         <h3>Parceria</h3>
